[gd_scene load_steps=21 format=2]

[ext_resource path="res://TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Sprites/11-Door/Idle.png" type="Texture" id=4]
[ext_resource path="res://Sprites/11-Door/Opening (46x56).png" type="Texture" id=5]
[ext_resource path="res://Augusta.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/11-Door/Closiong (46x56).png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 975.12, 10 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 46, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 92, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 138, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 184, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 46, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 92, 0, 46, 56 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "closing",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 22, 27.137 )

[sub_resource type="DynamicFont" id=12]
size = 74
outline_size = 3
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 28
font_data = ExtResource( 6 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 1 )
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 1, 12, 1, 1, 13, 1, 1, 14, 1, 1, 15, 1, 1, 16, 1, 1, 17, 1, 1, 18, 1, 1, 19, 1, 1, 20, 1, 1, 21, 1, 1, 22, 1, 1, 23, 1, 1, 24, 1, 1, 25, 1, 1, 26, 1, 1, 27, 1, 1, 28, 1, 1, 29, 1, 1, 30, 1, 1, 31, 1, 2, 65536, 1, 65536, 65537, 1, 6, 65538, 1, 131073, 65539, 1, 131073, 65540, 1, 131073, 65541, 1, 131073, 65542, 1, 131073, 65543, 1, 131073, 65544, 1, 7, 65545, 1, 6, 65546, 1, 131073, 65547, 1, 131073, 65548, 1, 131073, 65549, 1, 131073, 65550, 1, 131073, 65551, 1, 131073, 65552, 1, 131073, 65553, 1, 131073, 65554, 1, 131073, 65555, 1, 131073, 65556, 1, 131073, 65557, 1, 131073, 65558, 1, 131073, 65559, 1, 131073, 65560, 1, 131073, 65561, 1, 131073, 65562, 1, 131073, 65563, 1, 131073, 65564, 1, 131073, 65565, 1, 131073, 65566, 1, 7, 65567, 1, 65538, 131072, 1, 65536, 131073, 1, 65538, 131074, 2, 0, 131075, 2, 1, 131076, 2, 1, 131077, 2, 1, 131078, 2, 1, 131079, 2, 2, 131080, 1, 65536, 131081, 1, 65538, 131082, 2, 0, 131083, 2, 1, 131084, 2, 1, 131085, 2, 1, 131086, 2, 1, 131087, 2, 1, 131088, 2, 1, 131089, 2, 1, 131090, 2, 1, 131091, 2, 1, 131092, 2, 1, 131093, 2, 1, 131094, 2, 1, 131095, 2, 1, 131096, 2, 1, 131097, 2, 1, 131098, 2, 1, 131099, 2, 1, 131100, 2, 1, 131101, 2, 2, 131102, 1, 65536, 131103, 1, 65538, 196608, 1, 65536, 196609, 1, 65538, 196610, 2, 131072, 196611, 2, 7, 196612, 2, 6, 196613, 2, 131073, 196614, 2, 131073, 196615, 2, 131074, 196616, 1, 65536, 196617, 1, 65538, 196618, 2, 131072, 196619, 2, 131073, 196620, 2, 131073, 196621, 2, 131073, 196622, 2, 131073, 196623, 2, 131073, 196624, 2, 131073, 196625, 2, 131073, 196626, 2, 131073, 196627, 2, 131073, 196628, 2, 131073, 196629, 2, 131073, 196630, 2, 131073, 196631, 2, 131073, 196632, 2, 131073, 196633, 2, 131073, 196634, 2, 131073, 196635, 2, 131073, 196636, 2, 7, 196637, 2, 65538, 196638, 1, 65536, 196639, 1, 65538, 262144, 1, 65536, 262145, 1, 65546, 262146, 1, 262146, 262147, 2, 65536, 262148, 2, 65538, 262149, 1, 262144, 262150, 1, 262145, 262151, 1, 262145, 262152, 1, 262151, 262153, 1, 262150, 262154, 1, 262145, 262155, 1, 262145, 262156, 1, 262145, 262157, 1, 262145, 262158, 1, 262145, 262159, 1, 262145, 262160, 1, 262145, 262161, 1, 262145, 262162, 1, 262145, 262163, 1, 262145, 262164, 1, 262145, 262165, 1, 262145, 262166, 1, 262145, 262167, 1, 262145, 262168, 1, 262145, 262169, 1, 262145, 262170, 1, 262145, 262171, 1, 262146, 262172, 2, 65536, 262173, 2, 65538, 262174, 1, 65536, 262175, 1, 65538, 327680, 1, 65536, 327681, 1, 65538, 327682, 2, 0, 327683, 2, 65543, 327684, 2, 65542, 327685, 2, 1, 327686, 2, 1, 327687, 2, 1, 327688, 2, 1, 327689, 2, 1, 327690, 2, 1, 327691, 2, 1, 327692, 2, 1, 327693, 2, 1, 327694, 2, 1, 327695, 2, 1, 327696, 2, 1, 327697, 2, 1, 327698, 2, 1, 327699, 2, 1, 327700, 2, 1, 327701, 2, 1, 327702, 2, 1, 327703, 2, 1, 327704, 2, 1, 327705, 2, 1, 327706, 2, 1, 327707, 2, 1, 327708, 2, 65543, 327709, 2, 65538, 327710, 1, 65536, 327711, 1, 65538, 393216, 1, 65536, 393217, 1, 65538, 393218, 2, 65536, 393219, 2, 65537, 393220, 2, 65537, 393221, 2, 65537, 393222, 2, 65537, 393223, 2, 65537, 393224, 2, 65537, 393225, 2, 65537, 393226, 2, 65537, 393227, 2, 65537, 393228, 2, 65537, 393229, 2, 65537, 393230, 2, 65537, 393231, 2, 65537, 393232, 2, 65537, 393233, 2, 65537, 393234, 2, 65537, 393235, 2, 65537, 393236, 2, 65537, 393237, 2, 65537, 393238, 2, 65537, 393239, 2, 65537, 393240, 2, 65537, 393241, 2, 65537, 393242, 2, 6, 393243, 2, 131073, 393244, 2, 131073, 393245, 2, 131074, 393246, 1, 65536, 393247, 1, 65538, 458752, 1, 65536, 458753, 1, 65538, 458754, 2, 65536, 458755, 2, 65537, 458756, 2, 65537, 458757, 2, 65537, 458758, 2, 65537, 458759, 2, 65537, 458760, 2, 65537, 458761, 2, 6, 458762, 2, 131073, 458763, 2, 7, 458764, 2, 65537, 458765, 2, 65537, 458766, 2, 6, 458767, 2, 131073, 458768, 2, 7, 458769, 2, 65537, 458770, 2, 65537, 458771, 2, 65537, 458772, 2, 65537, 458773, 2, 65537, 458774, 2, 65537, 458775, 2, 65537, 458776, 2, 65537, 458777, 2, 65537, 458778, 2, 65538, 458779, 1, 262144, 458780, 1, 262145, 458781, 1, 262145, 458782, 1, 9, 458783, 1, 65538, 524288, 1, 65536, 524289, 1, 65538, 524290, 2, 65536, 524291, 2, 65537, 524292, 2, 65537, 524293, 2, 65537, 524294, 2, 65537, 524295, 2, 65537, 524296, 2, 65537, 524297, 2, 65538, 524298, 1, 262148, 524299, 2, 65536, 524300, 2, 65537, 524301, 2, 65537, 524302, 2, 65538, 524303, 1, 262148, 524304, 2, 65536, 524305, 2, 65537, 524306, 2, 65537, 524307, 2, 65537, 524308, 2, 65537, 524309, 2, 65537, 524310, 2, 6, 524311, 2, 131073, 524312, 2, 131073, 524313, 2, 7, 524314, 2, 65542, 524315, 2, 1, 524316, 2, 1, 524317, 2, 2, 524318, 1, 65536, 524319, 1, 65538, 589824, 1, 65536, 589825, 1, 65538, 589826, 2, 131072, 589827, 2, 131073, 589828, 2, 7, 589829, 2, 65537, 589830, 2, 65537, 589831, 2, 65537, 589832, 2, 65537, 589833, 2, 65542, 589834, 2, 1, 589835, 2, 65543, 589836, 2, 65537, 589837, 2, 65537, 589838, 2, 65542, 589839, 2, 1, 589840, 2, 65543, 589841, 2, 65537, 589842, 2, 65537, 589843, 2, 65537, 589844, 2, 65537, 589845, 2, 65537, 589846, 2, 65538, 589847, 1, 262144, 589848, 1, 262146, 589849, 2, 65536, 589850, 2, 65537, 589851, 2, 65537, 589852, 2, 65537, 589853, 2, 65538, 589854, 1, 65536, 589855, 1, 65538, 655360, 1, 65536, 655361, 1, 65546, 655362, 1, 262145, 655363, 1, 262146, 655364, 2, 65536, 655365, 2, 65537, 655366, 2, 65537, 655367, 2, 65537, 655368, 2, 65537, 655369, 2, 6, 655370, 2, 131073, 655371, 2, 131073, 655372, 2, 7, 655373, 2, 6, 655374, 2, 131073, 655375, 2, 131073, 655376, 2, 7, 655377, 2, 65537, 655378, 2, 65537, 655379, 2, 6, 655380, 2, 131073, 655381, 2, 131073, 655382, 2, 65551, 655383, 2, 1, 655384, 2, 1, 655385, 2, 65543, 655386, 2, 65537, 655387, 2, 65537, 655388, 2, 65537, 655389, 2, 65538, 655390, 1, 65536, 655391, 1, 65538, 720896, 1, 65536, 720897, 1, 65538, 720898, 2, 0, 720899, 2, 1, 720900, 2, 65543, 720901, 2, 65537, 720902, 2, 65537, 720903, 2, 65537, 720904, 2, 65537, 720905, 2, 65538, 720906, 1, 262144, 720907, 1, 262146, 720908, 2, 65536, 720909, 2, 65538, 720910, 1, 262144, 720911, 1, 262146, 720912, 2, 65536, 720913, 2, 65537, 720914, 2, 65537, 720915, 2, 65538, 720916, 1, 262144, 720917, 1, 262146, 720918, 2, 65536, 720919, 2, 65537, 720920, 2, 65537, 720921, 2, 65537, 720922, 2, 65537, 720923, 2, 65537, 720924, 2, 65537, 720925, 2, 65538, 720926, 1, 65536, 720927, 1, 65538, 786432, 1, 65536, 786433, 1, 65538, 786434, 2, 65536, 786435, 2, 65537, 786436, 2, 65537, 786437, 2, 65537, 786438, 2, 65537, 786439, 2, 65537, 786440, 2, 65537, 786441, 2, 65542, 786442, 2, 1, 786443, 2, 1, 786444, 2, 65543, 786445, 2, 65542, 786446, 2, 1, 786447, 2, 1, 786448, 2, 65543, 786449, 2, 65537, 786450, 2, 65537, 786451, 2, 65542, 786452, 2, 1, 786453, 2, 1, 786454, 2, 65543, 786455, 2, 65537, 786456, 2, 65537, 786457, 2, 65537, 786458, 2, 65537, 786459, 2, 65537, 786460, 2, 65537, 786461, 2, 65538, 786462, 1, 65536, 786463, 1, 65538, 851968, 1, 65536, 851969, 1, 65538, 851970, 2, 65536, 851971, 2, 65537, 851972, 2, 65537, 851973, 2, 65537, 851974, 2, 65537, 851975, 2, 65537, 851976, 2, 65537, 851977, 2, 6, 851978, 2, 131073, 851979, 2, 131073, 851980, 2, 131073, 851981, 2, 131073, 851982, 2, 131073, 851983, 2, 131073, 851984, 2, 7, 851985, 2, 65537, 851986, 2, 6, 851987, 2, 131073, 851988, 2, 131073, 851989, 2, 131073, 851990, 2, 7, 851991, 2, 65537, 851992, 2, 65537, 851993, 2, 65537, 851994, 2, 65537, 851995, 2, 65537, 851996, 2, 65537, 851997, 2, 65538, 851998, 1, 65536, 851999, 1, 65538, 917504, 1, 65536, 917505, 1, 65538, 917506, 2, 65536, 917507, 2, 65537, 917508, 2, 65537, 917509, 2, 65537, 917510, 2, 65537, 917511, 2, 65537, 917512, 2, 65537, 917513, 2, 65538, 917514, 1, 262144, 917515, 1, 262145, 917516, 1, 262145, 917517, 1, 262145, 917518, 1, 262145, 917519, 1, 262146, 917520, 2, 65536, 917521, 2, 65537, 917522, 2, 65538, 917523, 1, 262144, 917524, 1, 262145, 917525, 1, 262146, 917526, 2, 65536, 917527, 2, 65537, 917528, 2, 65537, 917529, 2, 65537, 917530, 2, 65537, 917531, 2, 65537, 917532, 2, 65537, 917533, 2, 65538, 917534, 1, 65536, 917535, 1, 65538, 983040, 1, 65536, 983041, 1, 65538, 983042, 2, 65536, 983043, 2, 65537, 983044, 2, 65537, 983045, 2, 65537, 983046, 2, 65537, 983047, 2, 65537, 983048, 2, 65537, 983049, 2, 65542, 983050, 2, 1, 983051, 2, 1, 983052, 2, 1, 983053, 2, 1, 983054, 2, 1, 983055, 2, 1, 983056, 2, 65543, 983057, 2, 65537, 983058, 2, 65542, 983059, 2, 1, 983060, 2, 1, 983061, 2, 1, 983062, 2, 65543, 983063, 2, 65537, 983064, 2, 65537, 983065, 2, 65537, 983066, 2, 65537, 983067, 2, 65537, 983068, 2, 65537, 983069, 2, 65538, 983070, 1, 65536, 983071, 1, 65538, 1048576, 1, 65536, 1048577, 1, 65538, 1048578, 2, 131072, 1048579, 2, 131073, 1048580, 2, 131073, 1048581, 2, 131073, 1048582, 2, 131073, 1048583, 2, 7, 1048584, 2, 65537, 1048585, 2, 6, 1048586, 2, 131073, 1048587, 2, 131073, 1048588, 2, 131073, 1048589, 2, 131073, 1048590, 2, 131073, 1048591, 2, 131073, 1048592, 2, 7, 1048593, 2, 65537, 1048594, 2, 6, 1048595, 2, 131073, 1048596, 2, 131073, 1048597, 2, 131073, 1048598, 2, 7, 1048599, 2, 6, 1048600, 2, 131073, 1048601, 2, 131073, 1048602, 2, 131073, 1048603, 2, 131073, 1048604, 2, 131073, 1048605, 2, 131074, 1048606, 1, 65536, 1048607, 1, 65538, 1114112, 1, 65536, 1114113, 1, 65542, 1114114, 1, 1, 1114115, 1, 1, 1114116, 1, 1, 1114117, 1, 1, 1114118, 1, 2, 1114119, 2, 65536, 1114120, 2, 65537, 1114121, 2, 65538, 1114122, 1, 0, 1114123, 1, 1, 1114124, 1, 1, 1114125, 1, 1, 1114126, 1, 1, 1114127, 1, 2, 1114128, 2, 65536, 1114129, 2, 65537, 1114130, 2, 65538, 1114131, 1, 0, 1114132, 1, 1, 1114133, 1, 2, 1114134, 2, 65536, 1114135, 2, 65538, 1114136, 1, 0, 1114137, 1, 1, 1114138, 1, 1, 1114139, 1, 1, 1114140, 1, 1, 1114141, 1, 1, 1114142, 1, 65543, 1114143, 1, 65538, 1179648, 1, 131072, 1179649, 1, 131073, 1179650, 1, 131073, 1179651, 1, 131073, 1179652, 1, 131073, 1179653, 1, 131073, 1179654, 1, 131074, 1179655, 2, 131072, 1179656, 2, 131073, 1179657, 2, 131074, 1179658, 1, 131072, 1179659, 1, 131073, 1179660, 1, 131073, 1179661, 1, 131073, 1179662, 1, 131073, 1179663, 1, 131074, 1179664, 2, 131072, 1179665, 2, 131073, 1179666, 2, 131074, 1179667, 1, 131072, 1179668, 1, 131073, 1179669, 1, 131074, 1179670, 2, 131072, 1179671, 2, 131074, 1179672, 1, 131072, 1179673, 1, 131073, 1179674, 1, 131073, 1179675, 1, 131073, 1179676, 1, 131073, 1179677, 1, 131073, 1179678, 1, 131073, 1179679, 1, 131074 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 212.468, 100.943 )
gravity = 400
max_speed = 100
friction = 1000000

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 212.701, 100.137 )

[node name="DeathFloor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathFloor"]
position = Vector2( 480, 712 )
shape = SubResource( 1 )

[node name="Goal" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Goal"]
position = Vector2( 360, 100.943 )
frames = SubResource( 10 )
animation = "closing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 360, 100.943 )
shape = SubResource( 11 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 336.0
margin_top = 192.0
margin_right = 616.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "You Won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 384.0
margin_top = 296.0
margin_right = 576.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 13 )
text = "Play Again?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="DeathFloor" to="." method="_on_DeathFloor_body_entered"]
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
